sort and search Select is finshied
sort and search Select is finshied ++

--- a/INV_WH_TOC.html
+++ b/INV_WH_TOC.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/jquery-ui.min.css" />
     <link rel="stylesheet" type="text/css" href="css/flatpicker.css" />
     <link rel="stylesheet" href="css/fontawesome.css" />
+    <link rel="stylesheet" href="css/select2.min.css">
     <link rel="stylesheet" type="text/css" href="css/mainStyle.css" />
 </head>
 
@@ -453,43 +454,7 @@
 
                 <div class="flexBetween inner-bagntion">
                     <div class="filter">
-                        <!--<a href="#" class="filters"><span><i
-                                    class="fas fa-filter"></i></span><span>Fillter</span><span><i
-                                    class="fas fa-caret-down"></i></span></a>-->
-                        <!--<a href="#" class="choose"><span><i class="fas fa-bars"></i></span><span>Choose</span><span><i
-                                    class="fas fa-caret-down"></i></span></a>-->
-                        <!--<a href="#" class=""><span>Print</span><span><i class="fas fa-caret-down"></i></span></a>-->
-                        <a href="#" class="action"><span>Action</span><span><i class="fas fa-caret-down"></i></span></a>
-
-                        <!--<div class="filterMath d-none">
-                            <ul>
-                                <li>Export</li>
-                                <li>Export 2</li>
-                                <li>طباعه</li>
-                                <li>Send By Email</li>
-                                <li>Delete</li>
-                            </ul>
-                        </div>
-
-                        <div class="chooseMath d-none">
-                            <ul>
-                                <li>Export</li>
-                                <li>Export 2</li>
-                                <li>طباعه</li>
-                                <li>Send By Email</li>
-                                <li>Delete</li>
-                            </ul>
-                        </div>-->
-
-                        <div class="actionMath d-none">
-                            <ul>
-                                <li>Export</li>
-                                <li>Export 2</li>
-                                <li>طباعه</li>
-                                <li>Send By Email</li>
-                                <li>Delete</li>
-                            </ul>
-                        </div>
+                        <a href="#" class="action"><span>Action</span><span></a><i class="fas fa-caret-down"></i></span>
                     </div>
 
                     <div class="sort">
@@ -518,28 +483,28 @@
                                     <th>
                                         <div class="ellipsisName">
                                             <span class="">Code</span>
-                                            <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                                            <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                                         </div>
                                     </th>
                                     <th class="ellipsisOne">
                                         <div>
                                             <span class="">Item</span>
-                                            <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                                            <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                                         </div>
                                     </th>
                                     <th class="ellipsisTwo">
                                         <div>
                                             <span class="">Balance</span>
-                                            <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                                            <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                                         </div>
                                     </th>
                                     <th class="ellipsisThree">
                                         <div>
                                             <span class="">Counts</span>
-                                            <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                                            <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                                         </div>
                                     </th>
-                                    <th><span class="ellipsisAction">Action</span></th>
+                                    <th class="headOfAction"><span class="ellipsisAction">Action</span></th>
                                     <th>
                                         <!-- justForGrid -->
                                     </th>
@@ -641,9 +606,18 @@
             </div>
         </div>
     </section>
-    <div class="hiddenAllItems"></div>
+         <div class="hiddenAllItems"></div>
     <script src="js/jquery_v3.3.1.js"></script>
     <script src="js/flatpicker.js"></script>
+    <script src="js/dataTable.js"></script>
+    <script src="js/dataTabeButtons.js"></script>
+    <script src="js/buttons.flash.min.js"></script>
+    <script src="js/jszip.min.js"></script>
+    <script src="js/pdfmake.min.js"></script>
+    <script src="js/vfs_fonts.js"></script>
+    <script src="js/buttons.html5.min.js"></script>
+    <script src="js/buttons.print.min.js"></script>
+    <script src="js/select2.min.js"></script>
     <script src="js/mainScript.js"></script>
 </body>
 
