--- a/PUR_PO_TOC.html
+++ b/PUR_PO_TOC.html
@@ -516,83 +516,83 @@
                   <th>
                     <div>
                       <span class="">Vendor</span>
-                      <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                      <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                     </div>
                   </th>
                   <th class="ellipsisOne">
                     <div>
                       <span class="">Bill Date</span>
-                      <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                      <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                     </div>
                   </th>
 
                   <th class="ellipsisTwo">
                     <div>
                       <span class="">Number</span>
-                      <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                      <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                     </div>
                   </th>
                   <th class="ellipsisThree">
                     <div>
                       <span class="">Payment Ref.</span>
-                      <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                      <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                     </div>
                   </th>
                   <th class="ellipsisFour">
                     <div>
                       <span class="">Due Date</span>
-                      <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                      <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                     </div>
                   </th>
                   <th class="ellipsisFive">
                     <div>
                       <span class="">Source Document</span>
-                      <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                      <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                     </div>
                   </th>
                   <th class="ellipsisSix">
                     <div>
                       <span class="">Tax Excluded</span>
-                      <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                      <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                     </div>
                   </th>
                   <th class="ellipsisSeven">
                     <div>
                       <span class="">Tax</span>
-                      <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                      <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                     </div>
                   </th>
                   <th class="ellipsisEight">
                     <div>
                       <span class="">Total</span>
-                      <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                      <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                     </div>
                   </th>
                   <th class="ellipsisNine">
                     <div>
                       <span class="">Paid</span>
-                      <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                      <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                     </div>
                   </th>
                   <th class="ellipsisTen">
                     <div>
                       <span class="">To Pay</span>
-                      <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                      <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                     </div>
                   </th>
                   <th class="ellipsisEleven">
                     <div>
                       <span class="">PO Status</span>
-                      <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                      <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                     </div>
                   </th>
                   <th class="ellipsisTwelve">
                     <div>
                       <span class="">Item Status</span>
-                      <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                      <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                     </div>
                   </th>
-                  <th><span class="ellipsisAction">Action</span></th>
+                  <th class="headOfAction"><span class="ellipsisAction">Action</span></th>
                   <th>
                     <!-- justForGrid -->
                   </th>
@@ -969,9 +969,18 @@
     </div>
   </section>
   <div class="hiddenAllItems"></div>
-  <script src="js/jquery_v3.3.1.js"></script>
-  <script src="js/flatpicker.js"></script>
-  <script src="js/mainScript.js"></script>
+    <script src="js/jquery_v3.3.1.js"></script>
+    <script src="js/flatpicker.js"></script>
+    <script src="js/dataTable.js"></script>
+    <script src="js/dataTabeButtons.js"></script>
+    <script src="js/buttons.flash.min.js"></script>
+    <script src="js/jszip.min.js"></script>
+    <script src="js/pdfmake.min.js"></script>
+    <script src="js/vfs_fonts.js"></script>
+    <script src="js/buttons.html5.min.js"></script>
+    <script src="js/buttons.print.min.js"></script>
+    <script src="js/select2.min.js"></script>
+    <script src="js/mainScript.js"></script>
 </body>
 
 </html>
