--- a/PUR_V_TOC.html
+++ b/PUR_V_TOC.html
@@ -377,46 +377,46 @@
                   <th>
                     <div class="ellipsisName">
                       <span class="">Name</span>
-                      <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                      <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                     </div>
                   </th>
                   <th class="ellipsisOne">
                     <div>
                       <span class="">Email</span>
-                      <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                      <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                     </div>
                   </th>
                   <th class="ellipsisTwo">
                     <div>
                       <span class="">Phone</span>
-                      <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                      <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                     </div>
                   </th>
                   <th class="ellipsisThree">
                     <div>
                       <span class="">Balance</span>
-                      <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                      <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                     </div>
                   </th>
                   <th class="ellipsisFour">
                     <div>
                       <span class="">Address</span>
-                      <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                      <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                     </div>
                   </th>
                   <th class="ellipsisFive">
                     <div>
                       <span class="">Website</span>
-                      <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                      <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                     </div>
                   </th>
                   <th class="ellipsisSix">
                     <div>
                       <span class="">Count</span>
-                      <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                      <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                     </div>
                   </th>
-                  <th><span class="ellipsisAction">Action</span></th>
+                  <th class="headOfAction"><span class="ellipsisAction">Action</span></th>
                   <th>
                     <!-- justForGrid -->
                   </th>
@@ -1201,9 +1201,18 @@
     </div>
   </section>
   <div class="hiddenAllItems"></div>
-  <script src="js/jquery_v3.3.1.js"></script>
-  <script src="js/flatpicker.js"></script>
-  <script src="js/mainScript.js"></script>
+    <script src="js/jquery_v3.3.1.js"></script>
+    <script src="js/flatpicker.js"></script>
+    <script src="js/dataTable.js"></script>
+    <script src="js/dataTabeButtons.js"></script>
+    <script src="js/buttons.flash.min.js"></script>
+    <script src="js/jszip.min.js"></script>
+    <script src="js/pdfmake.min.js"></script>
+    <script src="js/vfs_fonts.js"></script>
+    <script src="js/buttons.html5.min.js"></script>
+    <script src="js/buttons.print.min.js"></script>
+    <script src="js/select2.min.js"></script>
+    <script src="js/mainScript.js"></script>
 </body>
 
 </html>
