--- a/T_TG_TOC.html
+++ b/T_TG_TOC.html
@@ -377,16 +377,16 @@
                   <th>
                     <div>
                       <span class="">Name</span>
-                      <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                      <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                     </div>
                   </th>
                   <th class="ellipsisOne">
                     <div>
                       <span>Description</span>
-                      <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                      <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                     </div>
                   </th>
-                  <th><span class="ellipsisAction">Action</span></th>
+                  <th class="headOfAction"><span class="ellipsisAction">Action</span></th>
                   <th>
                     <!-- justForGrid -->
                   </th>
@@ -629,9 +629,18 @@
     </div>
   </section>
   <div class="hiddenAllItems"></div>
-  <script src="js/jquery_v3.3.1.js"></script>
-  <script src="js/flatpicker.js"></script>
-  <script src="js/mainScript.js"></script>
+    <script src="js/jquery_v3.3.1.js"></script>
+    <script src="js/flatpicker.js"></script>
+    <script src="js/dataTable.js"></script>
+    <script src="js/dataTabeButtons.js"></script>
+    <script src="js/buttons.flash.min.js"></script>
+    <script src="js/jszip.min.js"></script>
+    <script src="js/pdfmake.min.js"></script>
+    <script src="js/vfs_fonts.js"></script>
+    <script src="js/buttons.html5.min.js"></script>
+    <script src="js/buttons.print.min.js"></script>
+    <script src="js/select2.min.js"></script>
+    <script src="js/mainScript.js"></script>
 </body>
 
 </html>
