--- a/accountTransactions.html
+++ b/accountTransactions.html
@@ -588,31 +588,31 @@
                         <th>
                             <div class="ellipsisName">
                                 <span class="">Date</span>
-                                <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                                <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                             </div>
                         </th>
                         <th>
                             <div class="ellipsisOne">
                                 <span class="">Journal ID </span>
-                                <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                                <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                             </div>
                         </th>
                         <th>
                             <div class="ellipsisTwo">
                                 <span class="">debit</span>
-                                <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                                <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                             </div>
                         </th>
                         <th>
                             <div class="ellipsisThree">
                                 <span class="">credit</span>
-                                <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                                <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                             </div>
                         </th>
                         <th>
                             <div class="ellipsisFour">
                                 <span class="">action</span>
-                                <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                                <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                             </div>
                         </th>
 
