--- a/itemTransaction.html
+++ b/itemTransaction.html
@@ -583,31 +583,31 @@
                         <th>
                             <div class="ellipsisName">
                                 <span class="">Date</span>
-                                <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                                <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                             </div>
                         </th>
                         <th>
                             <div class="ellipsisOne">
                                 <span class="">Journal ID </span>
-                                <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                                <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                             </div>
                         </th>
                         <th>
                             <div class="ellipsisTwo">
                                 <span class="">debit</span>
-                                <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                                <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                             </div>
                         </th>
                         <th>
                             <div class="ellipsisThree">
                                 <span class="">credit</span>
-                                <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                                <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                             </div>
                         </th>
                         <th>
                             <div class="ellipsisFour">
                                 <span class="">action</span>
-                                <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                                <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                             </div>
                         </th>
 
@@ -642,8 +642,8 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr class="">
-                        <td colspan="7"><strong>Opening balance :</strong><span> 0</span></td>
+                    <tr>
+                        <td colspan="7" class="balanceState">Opening balance :<span> 0</span></td>
                     </tr>
                     <tr>
                         <a href="bal7a">
@@ -764,8 +764,8 @@
                             </td>
                         </a>
                     </tr>
-                    <tr class="">
-                        <td colspan="7"><strong>Ending balance :</strong><span> 0</span></td>
+                    <tr>
+                        <td colspan="7" class="balanceState">Ending balance :<span> 0</span></td>
                     </tr>
                 </tbody>
             </table>
