--- a/ACC_TOC.html
+++ b/ACC_TOC.html
@@ -363,6 +363,7 @@
       <div class="site-sections-wrapper">
         <div class="box-data-container">
           <div class="box-data-table-wrapper">
+         
             <table id="myTable" class="box-data-table">
               <thead>
                 <tr>
@@ -376,40 +377,40 @@
                   <th>
                     <div class="ellipsisName">
                       <span class="">Name</span>
-                      <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                      <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                     </div>
                   </th>
                   <th class="ellipsisOne">
                     <div>
                       <span class="">Date </span>
-                      <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                      <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                     </div>
                   </th>
                   <th class="ellipsisTwo">
                     <div>
                       <span class="">Attendanc</span>
-                      <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                      <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                     </div>
                   </th>
                   <th class="ellipsisThree">
                     <div>
                       <span class="">Case</span>
-                      <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                      <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                     </div>
                   </th>
                   <th class="ellipsisFour">
                     <div>
                       <span class="">Leave</span>
-                      <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                      <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                     </div>
                   </th>
                   <th class="ellipsisFive">
                     <div>
                       <span class="">Bounse</span>
-                      <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                      <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                     </div>
                   </th>
-                  <th><span class="ellipsisAction">Action</span></th>
+                  <th class="headOfAction"><span class="ellipsisAction">Action</span></th>
                   <th>
                     <!-- justForGrid -->
                   </th>
@@ -772,9 +773,18 @@
     </div>
   </section>
   <div class="hiddenAllItems"></div>
-  <script src="js/jquery_v3.3.1.js"></script>
-  <script src="js/flatpicker.js"></script>
-  <script src="js/mainScript.js"></script>
+    <script src="js/jquery_v3.3.1.js"></script>
+    <script src="js/flatpicker.js"></script>
+    <script src="js/dataTable.js"></script>
+    <script src="js/dataTabeButtons.js"></script>
+    <script src="js/buttons.flash.min.js"></script>
+    <script src="js/jszip.min.js"></script>
+    <script src="js/pdfmake.min.js"></script>
+    <script src="js/vfs_fonts.js"></script>
+    <script src="js/buttons.html5.min.js"></script>
+    <script src="js/buttons.print.min.js"></script>
+    <script src="js/select2.min.js"></script>
+    <script src="js/mainScript.js"></script>
 </body>
 
 </html>
