--- a/INV_I_TOC.html
+++ b/INV_I_TOC.html
@@ -8,9 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="css/jquery-ui.min.css" />
     <link rel="stylesheet" type="text/css" href="css/flatpicker.css" />
-    <!--     <link rel="stylesheet" href="css/dataTable.css">
- -->
     <link rel="stylesheet" href="css/fontawesome.css" />
+    <link rel="stylesheet" href="css/select2.min.css">
     <link rel="stylesheet" type="text/css" href="css/mainStyle.css" />
 </head>
 
@@ -493,31 +492,31 @@
                                     <th>
                                         <div class="ellipsisName">
                                             <span class="">Item Code</span>
-                                            <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                                            <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                                         </div>
                                     </th>
                                     <th class="ellipsisOne">
                                         <div>
                                             <span class="">Item Name</span>
-                                            <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                                            <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                                         </div>
                                     </th>
                                     <th class="ellipsisTwo">
                                         <div>
                                             <span class="">Price</span>
-                                            <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                                            <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                                         </div>
                                     </th>
                                     <th class="ellipsisThree">
                                         <div>
                                             <span class="">Status</span>
-                                            <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                                            <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                                         </div>
                                     </th>
                                     <th class="ellipsisFour">
                                         <div>
                                             <span class="">Ending Balance</span>
-                                            <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                                            <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                                         </div>
                                     </th>
                                     <th class="headOfAction"><span class="ellipsisAction">Action</span></th>
@@ -626,17 +625,18 @@
             </div>
         </div>
     </section>
-    <div class="hiddenAllItems"></div>
+     <div class="hiddenAllItems"></div>
     <script src="js/jquery_v3.3.1.js"></script>
     <script src="js/flatpicker.js"></script>
     <script src="js/dataTable.js"></script>
     <script src="js/dataTabeButtons.js"></script>
-    <script src="https://cdn.datatables.net/buttons/1.6.1/js/buttons.flash.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
-    <script src="https://cdn.datatables.net/buttons/1.6.1/js/buttons.html5.min.js"></script>
-    <script src="https://cdn.datatables.net/buttons/1.6.1/js/buttons.print.min.js"></script>
+    <script src="js/buttons.flash.min.js"></script>
+    <script src="js/jszip.min.js"></script>
+    <script src="js/pdfmake.min.js"></script>
+    <script src="js/vfs_fonts.js"></script>
+    <script src="js/buttons.html5.min.js"></script>
+    <script src="js/buttons.print.min.js"></script>
+    <script src="js/select2.min.js"></script>
     <script src="js/mainScript.js"></script>
 </body>
 
