--- a/PUR_P_TOC.html
+++ b/PUR_P_TOC.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/jquery-ui.min.css" />
     <link rel="stylesheet" type="text/css" href="css/flatpicker.css" />
     <link rel="stylesheet" href="css/fontawesome.css" />
+    <link rel="stylesheet" href="css/select2.min.css">
     <link rel="stylesheet" type="text/css" href="css/mainStyle.css" />
 </head>
 
@@ -454,43 +455,7 @@
 
                 <div class="flexBetween inner-bagntion">
                     <div class="filter">
-                        <!--<a href="#" class="filters"><span><i
-                                    class="fas fa-filter"></i></span><span>Fillter</span><span><i
-                                    class="fas fa-caret-down"></i></span></a>-->
-                        <!--<a href="#" class="choose"><span><i class="fas fa-bars"></i></span><span>Choose</span><span><i
-                                    class="fas fa-caret-down"></i></span></a>-->
-                        <!--<a href="#" class=""><span>Print</span><span><i class="fas fa-caret-down"></i></span></a>-->
-                        <a href="#" class="action"><span>Action</span><span><i class="fas fa-caret-down"></i></span></a>
-
-                        <!--<div class="filterMath d-none">
-                            <ul>
-                                <li>Export</li>
-                                <li>Export 2</li>
-                                <li>طباعه</li>
-                                <li>Send By Email</li>
-                                <li>Delete</li>
-                            </ul>
-                        </div>
-
-                        <div class="chooseMath d-none">
-                            <ul>
-                                <li>Export</li>
-                                <li>Export 2</li>
-                                <li>طباعه</li>
-                                <li>Send By Email</li>
-                                <li>Delete</li>
-                            </ul>
-                        </div>-->
-
-                        <div class="actionMath d-none">
-                            <ul>
-                                <li>Export</li>
-                                <li>Export 2</li>
-                                <li>طباعه</li>
-                                <li>Send By Email</li>
-                                <li>Delete</li>
-                            </ul>
-                        </div>
+                        <a href="#" class="action"><span>Action</span><span></a><i class="fas fa-caret-down"></i></span>
                     </div>
 
                     <div class="sort">
@@ -519,52 +484,52 @@
                                     <th>
                                         <div class="ellipsisName">
                                             <span class="">Payment Date</span>
-                                            <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                                            <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                                         </div>
                                     </th>
                                     <th class="ellipsisOne">
                                         <div>
                                             <span class="">Name</span>
-                                            <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                                            <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                                         </div>
                                     </th>
                                     <th class="ellipsisTwo">
                                         <div>
                                             <span class="">Payment Number</span>
-                                            <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                                            <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                                         </div>
                                     </th>
                                     <th class="ellipsisThree">
                                         <div>
                                             <span class="">Payment Journal</span>
-                                            <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                                            <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                                         </div>
                                     </th>
                                     <th class="ellipsisFour">
                                         <div>
                                             <span class="">Payment Method Type</span>
-                                            <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                                            <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                                         </div>
                                     </th>
                                     <th class="ellipsisFive">
                                         <div>
                                             <span class="">Vendor</span>
-                                            <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                                            <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                                         </div>
                                     </th>
                                     <th class="ellipsisSix">
                                         <div>
                                             <span class="">Payment Amount</span>
-                                            <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                                            <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                                         </div>
                                     </th>
                                     <th class="ellipsisSeven">
                                         <div>
                                             <span class="">Status</span>
-                                            <span class="sorts"><i class="fas fa-sort-amount-down"></i></span>
+                                            <span class="sorts"><i class="fas fa-sort-amount-up"></i></span>
                                         </div>
                                     </th>
-                                    <th><span class="ellipsisAction">Action</span></th>
+                                    <th class="headOfAction"><span class="ellipsisAction">Action</span></th>
 
                                     <th class="ellipsis">
                                         <i class="fas fa-ellipsis-v"></i>
@@ -766,9 +731,18 @@
             </div>
         </div>
     </section>
-    <div class="hiddenAllItems"></div>
+         <div class="hiddenAllItems"></div>
     <script src="js/jquery_v3.3.1.js"></script>
     <script src="js/flatpicker.js"></script>
+    <script src="js/dataTable.js"></script>
+    <script src="js/dataTabeButtons.js"></script>
+    <script src="js/buttons.flash.min.js"></script>
+    <script src="js/jszip.min.js"></script>
+    <script src="js/pdfmake.min.js"></script>
+    <script src="js/vfs_fonts.js"></script>
+    <script src="js/buttons.html5.min.js"></script>
+    <script src="js/buttons.print.min.js"></script>
+    <script src="js/select2.min.js"></script>
     <script src="js/mainScript.js"></script>
 </body>
 
