--- a/chartOfAccounts.html
+++ b/chartOfAccounts.html
@@ -453,43 +453,7 @@
 
                 <div class="flexBetween inner-bagntion">
                     <div class="filter">
-                        <!--<a href="#" class="filters"><span><i
-                                    class="fas fa-filter"></i></span><span>Fillter</span><span><i
-                                    class="fas fa-caret-down"></i></span></a>-->
-                        <!--<a href="#" class="choose"><span><i class="fas fa-bars"></i></span><span>Choose</span><span><i
-                                    class="fas fa-caret-down"></i></span></a>-->
-                        <!--<a href="#" class=""><span>Print</span><span><i class="fas fa-caret-down"></i></span></a>-->
-                        <a href="#" class="action"><span>Action</span><span><i class="fas fa-caret-down"></i></span></a>
-
-                        <!--<div class="filterMath d-none">
-                            <ul>
-                                <li>Export</li>
-                                <li>Export 2</li>
-                                <li>طباعه</li>
-                                <li>Send By Email</li>
-                                <li>Delete</li>
-                            </ul>
-                        </div>
-
-                        <div class="chooseMath d-none">
-                            <ul>
-                                <li>Export</li>
-                                <li>Export 2</li>
-                                <li>طباعه</li>
-                                <li>Send By Email</li>
-                                <li>Delete</li>
-                            </ul>
-                        </div>-->
-
-                        <div class="actionMath d-none">
-                            <ul>
-                                <li>Export</li>
-                                <li>Export 2</li>
-                                <li>طباعه</li>
-                                <li>Send By Email</li>
-                                <li>Delete</li>
-                            </ul>
-                        </div>
+                        <a href="#" class="action"><span>Action</span><span></a><i class="fas fa-caret-down"></i></span>
                     </div>
 
                     <div class="sort">
